--- a/administration/begriffe.html
+++ b/administration/begriffe.html
@@ -291,7 +291,7 @@
 </ul>
 <h2 id="transition-conditions">Transition Conditions</h2>
 <ul>
-<li>Es existieren zwei Arten von Bedingungen: Pre conditions uns conditions</li>
+<li>Es existieren zwei Arten von Bedingungen: Pre conditions und conditions</li>
 <li>Pre conditions m&#xFC;ssen erf&#xFC;llt sein, sodass diese f&#xFC;hr einen Nutzer zug&#xE4;nglich sind</li>
 <li>Conditions &#xFC;berpr&#xFC;fen auch den Payload und validieren somit den Payload</li>
 </ul>
