--- a/administration/begriffe.html
+++ b/administration/begriffe.html
@@ -250,10 +250,9 @@
                                 <h1 id="begriffe">Begriffe</h1>
 <h2 id="workflow">Workflow</h2>
 <ul>
-<li>umfasst verschiedene Zust&#xE4;nde, in denen sich eine Entit&#xE4;t w&#xE4;hrend seiner Existenz befinden kann</li>
+<li>umfasst verschiedene Zust&#xE4;nde, in denen sich eine Entit&#xE4;t w&#xE4;hrend ihrer Existenz befinden kann</li>
 <li>Workflows werden f&#xFC;r einen bespzifschen Typ einer Entit&#xE4;t definiert</li>
 <li>Pro Entit&#xE4;t k&#xF6;nnen mehrere Workflows definiert werden</li>
-<li>Workflows besitzen einen Typ, der beeinflusst </li>
 <li>&#xDC;ber Bedingungen wird geregelt, welcher Workflow f&#xFC;r eine Entit&#xE4;t zust&#xE4;ndig ist</li>
 </ul>
 <h2 id="workflowtyp">Workflowtyp</h2>
@@ -292,7 +291,7 @@
 <h2 id="transition-conditions">Transition Conditions</h2>
 <ul>
 <li>Es existieren zwei Arten von Bedingungen: Pre conditions und conditions</li>
-<li>Pre conditions m&#xFC;ssen erf&#xFC;llt sein, sodass diese f&#xFC;hr einen Nutzer zug&#xE4;nglich sind</li>
+<li>Pre conditions m&#xFC;ssen erf&#xFC;llt sein, sodass diese f&#xFC;r einen Nutzer zug&#xE4;nglich sind</li>
 <li>Conditions &#xFC;berpr&#xFC;fen auch den Payload und validieren somit den Payload</li>
 </ul>
 <h2 id="entit&#xE4;t">Entit&#xE4;t</h2>
@@ -315,7 +314,7 @@
 <ul>
 <li>Ein Item ist ein Wrapper f&#xFC;r eine Entit&#xE4;t und behinhaltet workflowspezifische Informationen</li>
 <li>Es verf&#xFC;gt &#xFC;ber die State-History</li>
-<li>Es Verf&#xFC;gt &#xFC;ber den Namen des aktuellen Workflows</li>
+<li>Es verf&#xFC;gt &#xFC;ber den Namen des aktuellen Workflows</li>
 </ul>
 
                                 
